--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ gson = "2.12.1"
 loggingInterceptor = "4.12.0"
 
 exoplayer = "2.19.1"
+exoui = "2.19.0"
 coroutines = "1.7.3"
 hilt = "2.50"
 
@@ -52,6 +53,7 @@ logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercep
 
 # Media
 exoplayer = { group = "com.google.android.exoplayer", name = "exoplayer", version.ref = "exoplayer" }
+exo-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoui" }
 
 # Coroutines
 coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -76,4 +78,5 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 navigation-safe-args = { id = "androidx.navigation.safeargs.kotlin", version = "2.9.0" }
+
 
