--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 # .github/workflows/ci.yml
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build-and-test:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: "temurin"
+          distribution: temurin
           java-version: "11"
 
       - name: Install Android SDK
@@ -48,18 +48,16 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
       - name: Build and run all unit tests
         run: ./gradlew clean test
 
-
-
-      - name: Upload test results
+      - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: junit-results
           path: |
             **/build/test-results/*.xml
-            **/build/reports/tests/testDebugUnitTest/*.html
+            **/build/reports/tests/**/*.html
