--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 on:
   push:
     branches: [main]
@@ -19,20 +18,26 @@ jobs:
           distribution: temurin
           java-version: "11"
 
-      - name: Set up Android SDK
-        uses: actions/setup-android@v4
-        with:
-          api-level: 34
-          build-tools: "34.0.0"
-          components: |
-            platform-tools
-            platforms;android-34
 
-      - name: Accept Android SDK licenses
-        run: yes | sdkmanager --licenses
+      - name: Install Android SDK components
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip lib32stdc++6 lib32z1
+          # SDK_ROOT указывает папку, куда sdkmanager будет устанавливать компоненты.
+          export ANDROID_SDK_ROOT="$HOME/Android/Sdk"
+          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+          cd "$ANDROID_SDK_ROOT/cmdline-tools"
+          curl -sS https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -o cmdline-tools.zip
+          unzip -qq cmdline-tools.zip
+          mv cmdline-tools latest
+          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          cd -
+
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build and run all unit tests
+      - name: Build and run unit tests
         run: ./gradlew clean test
