--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# .github/workflows/ci.yml
+
 on:
   push:
     branches: [main]
@@ -12,18 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: "11"
-
+          java-version: "17"
 
       - name: Install Android SDK components
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip lib32stdc++6 lib32z1
-          # SDK_ROOT указывает папку, куда sdkmanager будет устанавливать компоненты.
           export ANDROID_SDK_ROOT="$HOME/Android/Sdk"
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           cd "$ANDROID_SDK_ROOT/cmdline-tools"
@@ -34,7 +34,6 @@ jobs:
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "platforms;android-34" "build-tools;34.0.0"
           cd -
-
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
